# openCV-library

./: README.md
Video_caoture/: CMakeLists.txt  README.md  display.cpp  flip.cpp  main.cpp  removeRed.cpp  rotate.cpp  showWindow.cpp  video_processing.h
merge_split/: CMakeLists.txt  README.md  main.cpp
read_flip_image/: CMakeLists.txt  README.md  main.cpp
types_channels/: CMakeLists.txt  README.md  main.cpp
